# Temporal-Face-Synthesis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: validate_pipeline.py
src/: __init__.py  face_swap_pipeline.py
src/swappers/: __init__.py  base.py  ghost.py  inswapper.py  simswap.py
