[project]
name = "temporal-face-synthesis"
version = "0.1.0"
description = "AI-powered face swap for video - King movie feeler campaign"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "insightface>=0.7.0",
    "onnxruntime>=1.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
]
